--- a/product/templates/product.html
+++ b/product/templates/product.html
@@ -8,8 +8,7 @@
 {% block device %}
 
 
-
- <div class="small-header bg-white">
+ <div class="small-header bg-gray2">
     </div>
    
  <!-- Devices Section-->
