--- a/product/templates/products.html
+++ b/product/templates/products.html
@@ -8,7 +8,7 @@
 {% block device %}
 
 
- <div class="small-header bg-white">
+ <div class="small-header bg-gray2">
     </div>
    
  <!-- Devices Section-->
@@ -30,7 +30,7 @@
 
                 <h1>{{ product.slogan }}</h1>
 
-                <h3><a href="/products/product/{{current_category.id}}/{{product.id}}/{{ menu }}/">Learning more ></a><span></span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#0">Buy ></a></h3>
+                <h3><a href="/products/product/{{current_category.id}}/{{product.id}}/">Learning more ></a><span></span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#0">Buy ></a></h3>
 
                 </div>
 
@@ -39,7 +39,7 @@
 
                 <div class="device">
 
-                <h3><a href="/products/product/{{current_category.id}}/{{product.id}}/{{ menu }}/">Learning more ></a><span></span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#0">Buy ></a></h3>
+                <h3><a href="/products/product/{{current_category.id}}/{{product.id}}/">Learning more ></a><span></span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#0">Buy ></a></h3>
 
                 </div>
                 
