--- a/static/pangolin/css/universal.css
+++ b/static/pangolin/css/universal.css
@@ -55,8 +55,12 @@ Table of contents
 @import url(swipebox.css);
 /* Base structure */
 html {
+  width: 100%;
+  height: 100%; }
+
+/*html {
   width: 100% !important;
-  height: 100% !important; }
+  height: 100% !important; }  */
 
 body {
   width: 100% !important;
@@ -149,7 +153,7 @@ h4, h5, h6 {
 
 .device  h2 {
   text-transform: none;
-  margin: 0 0 15px;
+  margin: 60px 0 15px;
   letter-spacing: 0.01em;
   line-height: 1.2;
   font-size: 30px;
@@ -157,9 +161,10 @@ h4, h5, h6 {
   font-weight: 600; }  
 
 .device h3 {
-  margin: 0 0 2px;
+  margin: 10px 0 10px;
   letter-spacing: 0.06em;
   text-transform: none;
+  /*padding-bottom: 40px;*/
   line-height: 1.2;
   font-size: 20px;
   color: #8F3985;
@@ -183,7 +188,7 @@ h4, h5, h6 {
   text-decoration: none; }   
 
 .device h1 {
-  margin: 0 0 15px;
+  margin: 0px 0 15px;
   text-transform: none;
   letter-spacing: 0.001em;
   line-height: 1.0;
@@ -266,11 +271,18 @@ a img:hover {
   background-color: transparent;
   padding: 15px 15px; }
 
+section, .row_main {
+  position: relative;
+  z-index: 992;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #fff; }
+
 section, .section {
   position: relative;
   z-index: 992;
-  padding-top: 140px;
-  padding-bottom: 140px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   background-color: #fff; }
 
 .section-small {
@@ -475,7 +487,7 @@ a .fa {
   .top-nav-collapse .container {
     width: 1170px !important; } }
 .navbar-custom .navbar-brand .logo {
-  max-height: 60px;
+  max-height: 50px;
   display: inline-block; }
 
 .logoborder {
@@ -1935,8 +1947,8 @@ li .shop-cart {
       margin: 50px 0 50px; }
 
   section, .section {
-    padding-top: 120px;
-    padding-bottom: 120px; }
+    padding-top: 0px;
+    padding-bottom: 40px; }
 
   .section-small {
     padding-top: 60px;
