--- a/templates/all_tamplates.html
+++ b/templates/all_tamplates.html
@@ -5,6 +5,290 @@
 {% load thumbnail %}
 {# {% load content_tags %} #}
 
+{% if menu == 3 %}
+
+<header class="cd-auto-hide-header">
+
+<div class="logo"><a href="/menu/{{ menu }}/"><img src="{% static 'pangolin/img/pangolin_logo_small.png' %}" alt="Logo"></a></div>
+
+  <nav class="cd-primary-nav">
+    <a href="#cd-navigation" class="nav-trigger">
+      <span>
+        <em aria-hidden="true"></em>
+        {# Menu #}
+      </span>
+    </a> <!-- .nav-trigger -->
+
+    
+
+    <ul id="cd-navigation">
+      {# <li><a href="/menu/{{ menu }}/"><img src="{% static 'pangolin/img/pangolin_logo_small_sq.png' %}" alt="Logo"></a></li> #}
+
+      {# {% if categories %}  #}
+       {% for category in categories %}
+
+      <li><a href="/products/{{category.id}}/{{ menu }}/">{{ category.name }}</a></li>
+
+      {% endfor %}
+      {# {% endif %}  #}
+      {# <li><a href="/">Products</a></li> #}
+      {# <li><a href="/support/">Support</a></li> #}
+      {# <li><a href="/support/">Educations</a></li> #}
+      {# <li><a href="/news/">News</a></li> #}
+      {# <li><a href="/contact/">Contact</a></li> #}
+      <li><a href="/support/supports/{{ menu }}/">Support</a></li>
+       <li class="menu-divider visible-lg">&nbsp;</li>
+            <li class="dropdown"><a href="#" class="dropdown-toggle"><i class="fa fa-shopping-bag fa-lg"></i><span class="badge">3</span><span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li class="shop-nav">
+                  <div class="shop-cart"><a href="shop-cart.html"><img src="img/shop/1.jpg" alt=" ">
+                      <div class="btn-dark-border btn btn-xs">$128.99</div><i class="fa fa-times float-right"></i><br>Jacket with contrasting hood</a></div>
+                </li>
+                <li class="shop-nav">
+                  <div class="shop-cart"><a href="shop-cart.html"><img src="img/shop/2.jpg" alt=" ">
+                      <div class="btn-dark-border btn btn-xs">$186.99</div><i class="fa fa-times float-right"></i><br>Jacket with a seam on the lapel</a></div>
+                </li>
+                <li class="shop-nav">
+                  <div class="shop-cart"><a href="shop-cart.html"><img src="img/shop/3.jpg" alt=" ">
+                      <div class="btn-dark-border btn btn-xs">$98.99</div><i class="fa fa-times float-right"></i><br>Faux leather jacket</a></div><span class="text-left">Subtotal:</span><span class="float-right"><b>$386.99</b></span>
+                </li>
+                <li><a href="shop-cart.html"><span class="btn btn-dark-border btn-sm">Checkout</span></a></li>
+              </ul>
+            </li>
+            <li class="dropdown"><a href="#" class="dropdown-toggle"><i class="fa fa-search fa-lg"></i><span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li>
+                  <form method="post" class="search-form">
+                    <button type="submit" title="Search" class="search-button"><i class="fa fa-search fa-lg"></i></button>
+                    <input type="text" placeholder="SEARCH" class="form-control search-field">
+                  </form>
+                </li>
+              </ul>
+            </li>
+  
+      <li><a href="/menu/{{1}}/">menu1</a></li>
+      {# <li><a href="/menu/{{2}}/">menu2</a></li> #}
+      <li><a href="/menu/{{3}}/">menu3</a></li>
+    </ul>
+  </nav> <!-- .cd-primary-nav -->
+
+  
+{% if products %}
+   <nav class="cd-secondary-nav">
+    <ul>
+
+      {% if current_product %}
+      <li><a class="active" href="/products/product/{{current_category.id}}/{{current_product.id}}/{{ menu }}/">{{ current_product.product_title }}</a></li>
+
+      {% for menu_item in menu_items %}
+
+      {% if menu_item.name == "Buy" %}
+
+      <li class="buy"><a href="#0">Buy</a></li>
+
+      {% else %}
+
+      <li class="product"><a href="#0">{{ menu_item.name }}</a></li> 
+
+      {% endif %}
+
+      {% endfor %}
+
+      {% else %}
+
+
+
+      {% for product in products %}
+      
+      <li><a href="/products/product/{{current_category.id}}/{{product.id}}/{{ menu }}/">{{ product.product_title }}</a></li>
+
+      {% endfor %}
+
+      <li><a href="#0">Accessories</a></li> 
+
+      <li><a href="#0">Compare</a></li> 
+      {# <li class="buy"><a href="#0">Buy</a></li> #}
+
+      {% endif %}
+      
+      
+       
+    </ul>
+  </nav> <!-- .cd-secondary-nav -->
+
+{% elif supports %}
+   <nav class="cd-secondary-nav">
+    <ul>
+
+      {% for support in supports %}
+
+      <li><a href="/support/support/{{support.id}}/{{ menu }}/">{{ support.title }}</a></li>
+
+      {% endfor %}
+       
+    </ul>
+  </nav> <!-- .cd-secondary-nav -->
+{% endif %}
+
+
+    </section>
+    <!-- About Section-->
+    <section id="about2" class="bg-gray">
+      <div class="container wow fadeIn">
+        <div class="row">
+          <div class="col-lg-6">
+            <h3>We have magic</h3>
+            <p>Universal easily and efficiently scales your project with one code base. Amazing solution for portfolio websites which you can fit for freelancers, photographers or agency showcase.</p><a href="#" class="btn btn-dark">Check it out</a>
+          </div>
+          <div class="col-lg-5 col-lg-offset-1 text-center">
+            <h3>&nbsp;</h3>
+            <div data-thickness="4" data-value="0.93" class="circle"><span></span>
+              <div class="agenda">Design</div>
+            </div>
+            <div data-thickness="10" data-value="0.82" class="circle"><span></span>
+              <div class="agenda">Programming</div>
+            </div>
+            <div data-thickness="18" data-value="0.68" class="circle"><span></span>
+              <div class="agenda">Photography</div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    
+  
+    <!-- Subscribe Section-->
+    <section id="subscribe" class="section-small bg-img5 text-center">
+      <div class="overlay-white"></div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-8 col-sm-offset-2">
+            <h3>Subscribe</h3>
+            <h5>Sign-Up For News Updates and Alerts</h5>
+            <!-- MailChimp Signup Form - Replace the form action in the line below with your MailChimp embed action! For more information on how to do this please visit the Docs!-->
+            <form id="mc-embedded-subscribe-form" action="" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="" class="form-inline subscribe-form">
+              <div class="input-group input-group-lg">
+                <input id="mce-EMAIL" type="email" name="EMAIL" placeholder="Email address..." class="form-control"><span class="input-group-btn">
+                  <button id="mc-embedded-subscribe" type="submit" name="subscribe" class="btn btn-dark">Subscribe</button></span>
+                <div id="mce-responses"></div>
+                <div id="mce-error-response" style="display:none" class="response"></div>
+                <div id="mce-success-response" style="display:none" class="response"></div>
+              </div>
+            </form>
+            <!-- End MailChimp Signup Form--><img src="img/misc/mailchimp.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+   
+    <!-- Portfolio-->
+    <section id="portfolio" class="bg-gray no-pad-btm">
+      <div class="container text-center">
+        <div class="row">
+          <div class="col-sm-10 col-sm-offset-1">
+            <h3>Portfolio</h3>
+            <ul class="portfolio-sorting list-inline text-center">
+              <li><a href="portfolio-single.html" data-group="all" class="active">All</a></li>
+              <li><a href="portfolio-single.html" data-group="photo">Photo</a></li>
+              <li><a href="portfolio-single.html" data-group="design">Design</a></li>
+              <li><a href="portfolio-single.html" data-group="branding">Branding</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="container-fluid">
+        <div id="grid" class="row portfolio-items">
+          <div data-groups="[&quot;design&quot;, &quot;branding&quot;]" class="col-md-3 col-sm-6 no-pad">
+            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/1.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="caption">
+                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
+                  </div>
+                </div></a></div>
+          </div>
+          <div data-groups="[&quot;photo&quot;, &quot;branding&quot;]" class="col-md-3 col-sm-6 no-pad">
+            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/2.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="caption">
+                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
+                  </div>
+                </div></a></div>
+          </div>
+          <div data-groups="[&quot;&quot;]" class="col-md-3 col-sm-6 no-pad">
+            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/13.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="caption">
+                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
+                  </div>
+                </div></a></div>
+          </div>
+          <div data-groups="[&quot;design&quot;, &quot;photo&quot;]" class="col-md-3 col-sm-6 no-pad">
+            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/3.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="caption">
+                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
+                  </div>
+                </div></a></div>
+          </div>
+          <div data-groups="[&quot;branding&quot;, &quot;design&quot;]" class="col-md-3 col-sm-6 no-pad">
+            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/5.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="caption">
+                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
+                  </div>
+                </div></a></div>
+          </div>
+          <div data-groups="[&quot;photo&quot;, &quot;design&quot;]" class="col-md-3 col-sm-6 no-pad">
+            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/6.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="caption">
+                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
+                  </div>
+                </div></a></div>
+          </div>
+          <div data-groups="[&quot;photo&quot;, &quot;branding&quot;]" class="col-md-3 col-sm-6 no-pad">
+            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/7.jpg" alt="">
+                <div class="portfolio-overlay">
+                  <div class="caption">
+                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
+                  </div>
+                </div></a></div>
+          </div>
+        </div>
+      </div>
+    </section>
+   
+
+
+
+
+
+
+        <div class="row">
+          <div class="col-lg-6">
+            <h3>Who We Are</h3>
+            <p class="no-pad">
+That's what we do with our competitors.</p>
+            <h2 class="classic">The Pangolin Team</h2>
+          </div>
+          <div data-wow-duration="2s" data-wow-delay=".2s" class="col-lg-5 col-lg-offset-1 wow zoomIn">
+            <div id="carousel-light2" class="carousel slide carousel-fade">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-light2" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-light2" data-slide-to="1"></li>
+                <li data-target="#carousel-light2" data-slide-to="2"></li>
+              </ol>
+              <div role="listbox" class="carousel-inner">
+                <div class="item active"><img src="{% static 'pangolin/img/laser_9.gif' %}" alt="" class="img-responsive center-block"></div>
+                <div class="item"><img src="img/misc/5.png" alt="" class="img-responsive center-block"></div>
+                <div class="item"><img src="img/misc/4.png" alt="" class="img-responsive center-block"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+<div id='mount-point'></div>
+
 
  {% if menu == 1 %}
   
