--- a/templates/main.html
+++ b/templates/main.html
@@ -12,7 +12,7 @@
 
     <!-- Navigation One Page-->
 
-     <div class="small-header bg-white"></div>
+     {# <div class="small-header bg-gray2"></div> #}
 
 
 
@@ -25,9 +25,9 @@
         <li data-target="#Carousel-intro" data-slide-to="1"></li>
         <li data-target="#Carousel-intro" data-slide-to="2"></li>
         <li data-target="#Carousel-intro" data-slide-to="3"></li>
-        <li data-target="#Carousel-intro" data-slide-to="4"></li>
-        <li data-target="#Carousel-intro" data-slide-to="5"></li>
-        <li data-target="#Carousel-intro" data-slide-to="6"></li>
+        {# <li data-target="#Carousel-intro" data-slide-to="4"></li> #}
+        {# <li data-target="#Carousel-intro" data-slide-to="5"></li> #}
+        {# <li data-target="#Carousel-intro" data-slide-to="6"></li> #}
       </ol>
 
        <div class="carousel-inner">
@@ -66,178 +66,13 @@
       <!-- Controls--><a href="#Carousel-intro" data-slide="prev" class="left carousel-control"><span class="icon-prev"></span></a><a href="#Carousel-intro" data-slide="next" class="right carousel-control"><span class="icon-next"></span></a>
     </header>
     <!-- Slider-->
-    
 
-    <section id="about" class="section-small">
-      <div class="container">
-
-        
-
-
-
-        <div class="row">
-          <div class="col-lg-6">
-            <h3>Who We Are</h3>
-            <p class="no-pad">
-That's what we do with our competitors.</p>
-            <h2 class="classic">The Pangolin Team</h2>
-          </div>
-          <div data-wow-duration="2s" data-wow-delay=".2s" class="col-lg-5 col-lg-offset-1 wow zoomIn">
-            <div id="carousel-light2" class="carousel slide carousel-fade">
-              <ol class="carousel-indicators">
-                <li data-target="#carousel-light2" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-light2" data-slide-to="1"></li>
-                <li data-target="#carousel-light2" data-slide-to="2"></li>
-              </ol>
-              <div role="listbox" class="carousel-inner">
-                <div class="item active"><img src="{% static 'pangolin/img/laser_9.gif' %}" alt="" class="img-responsive center-block"></div>
-                <div class="item"><img src="img/misc/5.png" alt="" class="img-responsive center-block"></div>
-                <div class="item"><img src="img/misc/4.png" alt="" class="img-responsive center-block"></div>
-              </div>
-            </div>
-          </div>
-        </div>
-
-<div id='mount-point'></div>
-
-      </div>
-    </section>
-    <!-- About Section-->
-    <section id="about2" class="bg-gray">
-      <div class="container wow fadeIn">
-        <div class="row">
-          <div class="col-lg-6">
-            <h3>We have magic</h3>
-            <p>Universal easily and efficiently scales your project with one code base. Amazing solution for portfolio websites which you can fit for freelancers, photographers or agency showcase.</p><a href="#" class="btn btn-dark">Check it out</a>
-          </div>
-          <div class="col-lg-5 col-lg-offset-1 text-center">
-            <h3>&nbsp;</h3>
-            <div data-thickness="4" data-value="0.93" class="circle"><span></span>
-              <div class="agenda">Design</div>
-            </div>
-            <div data-thickness="10" data-value="0.82" class="circle"><span></span>
-              <div class="agenda">Programming</div>
-            </div>
-            <div data-thickness="18" data-value="0.68" class="circle"><span></span>
-              <div class="agenda">Photography</div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    
-  
-    <!-- Subscribe Section-->
-    <section id="subscribe" class="section-small bg-img5 text-center">
-      <div class="overlay-white"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-8 col-sm-offset-2">
-            <h3>Subscribe</h3>
-            <h5>Sign-Up For News Updates and Alerts</h5>
-            <!-- MailChimp Signup Form - Replace the form action in the line below with your MailChimp embed action! For more information on how to do this please visit the Docs!-->
-            <form id="mc-embedded-subscribe-form" action="" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="" class="form-inline subscribe-form">
-              <div class="input-group input-group-lg">
-                <input id="mce-EMAIL" type="email" name="EMAIL" placeholder="Email address..." class="form-control"><span class="input-group-btn">
-                  <button id="mc-embedded-subscribe" type="submit" name="subscribe" class="btn btn-dark">Subscribe</button></span>
-                <div id="mce-responses"></div>
-                <div id="mce-error-response" style="display:none" class="response"></div>
-                <div id="mce-success-response" style="display:none" class="response"></div>
-              </div>
-            </form>
-            <!-- End MailChimp Signup Form--><img src="img/misc/mailchimp.png" alt="">
-          </div>
-        </div>
-      </div>
-    </section>
-   
-    <!-- Portfolio-->
-    <section id="portfolio" class="bg-gray no-pad-btm">
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-sm-10 col-sm-offset-1">
-            <h3>Portfolio</h3>
-            <ul class="portfolio-sorting list-inline text-center">
-              <li><a href="portfolio-single.html" data-group="all" class="active">All</a></li>
-              <li><a href="portfolio-single.html" data-group="photo">Photo</a></li>
-              <li><a href="portfolio-single.html" data-group="design">Design</a></li>
-              <li><a href="portfolio-single.html" data-group="branding">Branding</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-      <div class="container-fluid">
-        <div id="grid" class="row portfolio-items">
-          <div data-groups="[&quot;design&quot;, &quot;branding&quot;]" class="col-md-3 col-sm-6 no-pad">
-            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/1.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="caption">
-                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
-                  </div>
-                </div></a></div>
-          </div>
-          <div data-groups="[&quot;photo&quot;, &quot;branding&quot;]" class="col-md-3 col-sm-6 no-pad">
-            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/2.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="caption">
-                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
-                  </div>
-                </div></a></div>
-          </div>
-          <div data-groups="[&quot;&quot;]" class="col-md-3 col-sm-6 no-pad">
-            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/13.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="caption">
-                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
-                  </div>
-                </div></a></div>
-          </div>
-          <div data-groups="[&quot;design&quot;, &quot;photo&quot;]" class="col-md-3 col-sm-6 no-pad">
-            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/3.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="caption">
-                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
-                  </div>
-                </div></a></div>
-          </div>
-          <div data-groups="[&quot;branding&quot;, &quot;design&quot;]" class="col-md-3 col-sm-6 no-pad">
-            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/5.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="caption">
-                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
-                  </div>
-                </div></a></div>
-          </div>
-          <div data-groups="[&quot;photo&quot;, &quot;design&quot;]" class="col-md-3 col-sm-6 no-pad">
-            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/6.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="caption">
-                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
-                  </div>
-                </div></a></div>
-          </div>
-          <div data-groups="[&quot;photo&quot;, &quot;branding&quot;]" class="col-md-3 col-sm-6 no-pad">
-            <div class="portfolio-item"><a href="portfolio-single.html"><img src="img/portfolio/7.jpg" alt="">
-                <div class="portfolio-overlay">
-                  <div class="caption">
-                    <h5>Form Image Creative</h5><span>Lorem ipsum dolor sit amet</span>
-                  </div>
-                </div></a></div>
-          </div>
-        </div>
-      </div>
-    </section>
-   
 
 
     <!-- Why Section-->
     <section>
       <div class="container text-center">
-        <div class="row">
-          <div class="col-lg-8 col-lg-offset-2">
-            <h3>Why Choose Us?</h3>
-          </div>
-        </div>
+        
         <div class="row">
           <div data-wow-delay=".2s" class="col-lg-3 col-sm-6 wow fadeIn">
             <h4><i class="icon-big icon ion-ios-infinite-outline"></i> Multi-purpose</h4>
