--- a/product/templates/products.html
+++ b/product/templates/products.html
@@ -8,14 +8,16 @@
 {% block device %}
 
 
- <div class="small-header bg-gray2">
-    </div>
+ 
    
  <!-- Devices Section-->
     <section id="testimonials">
+ <div class="small-header bg-white"></div>
+    
       <div class="container">
-        {% for product in products %}
-        <div class="row">
+{% for product in products %}
+        
+        <div class="row_products">
 
             
           <div class="col-md-9 col-md-offset-3">
@@ -45,11 +47,12 @@
                 
               </div>
           </div>
+
            
         </div>
 
-
-        {% endfor %}
+ {% endfor %}
+        
       </div>
     </section>
  
