--- a/templates/index.html
+++ b/templates/index.html
@@ -145,7 +145,7 @@
 
 
 
-    
+  <!-- Content Section-->  
     
 {% block device %}{% endblock %}
 
@@ -160,32 +160,35 @@
 {% block support %}{% endblock %} 
 
 {% block contact %}{% endblock %}   
+
+
+
     
     <!-- Footer Section-->
     <section class="section-small footer bg-gray">
       <div class="container">
         <div class="row">
-          <div class="col-sm-4">
-            <h5>About</h5>
-            <p>Thanks your</p>
+        
+          <div class="col-sm-3 col-sm-offset-1 footer-menu">
+          
+            <h5>Products</h5>
+            {% category_footer %}
           </div>
-          <div class="col-sm-2 col-sm-offset-1 footer-menu">
-            <h5>Company</h5>
-            <h6 class="no-pad"><a href="services.html">Our Services</a></h6>
+           <div class="col-sm-3 col-sm-offset-1 footer-menu">
+            <h5>Support</h5>
+            {% support_footer %}
+          </div>
+           
+           <div class="col-sm-3 col-sm-offset-1 footer-menu">
+            <h5>Pangolin</h5>
+            <h6 class="no-pad"><a href="services.html">About us</a></h6>
             <h6 class="no-pad"><a href="clients.html">Our Clients</a></h6>
+            <h6 class="no-pad"><a href="contact.html">Our Team</a></h6>
             <h6 class="no-pad"><a href="contact.html">Contact Us</a></h6>
+            <h6 class="no-pad"><a href="register.html">Register</a></h6>
             <h6 class="no-pad"><a href="shop.html">Shop</a></h6>
           </div>
-          <div class="col-sm-2 footer-menu">
-            <h5>&nbsp;</h5>
-            <h6 class="no-pad"><a href="about.html">About us</a></h6>
-            <h6 class="no-pad"><a href="portfolio-masonry-4.html">Portfolio</a></h6>
-            <h6 class="no-pad"><a href="team.html">Our Team</a></h6>
-            <h6 class="no-pad"><a href="register.html">Register</a></h6>
-          </div>
-          <div class="col-sm-3 text-right">
-            <h5>Total downloads</h5><span data-min="0" data-max="2785" data-delay="5" data-increment="3" class="numscroller">0</span>
-          </div>
+         
         </div>
       </div>
     </section>
@@ -206,6 +209,9 @@
               <li><a href="/"><i class="fa fa-facebook fa-fw fa-lg"></i></a></li>
               <li><a href="/"><i class="fa fa-google-plus fa-fw fa-lg"></i></a></li>
               <li><a href="/"><i class="fa fa-linkedin fa-fw fa-lg"></i></a></li>
+              <li><a href="/"><i class="fa fa-pinterest fa-fw fa-lg"></i></a></li>
+              <li><a href="/"><i class="fa fa-youtube fa-fw fa-lg"></i></a></li>
+              <li><a href="/"><i class="fa fa-youtube fa-fw fa-lg"></i></a></li>
             </ul>
           </div>
         </div>
