--- a/product/templates/product.html
+++ b/product/templates/product.html
@@ -8,14 +8,15 @@
 {% block device %}
 
 
- <div class="small-header bg-gray2">
-    </div>
+ 
    
  <!-- Devices Section-->
     <section id="testimonials">
+    <div class="small-header bg-white">
+    </div>
       <div class="container">
        
-        <div class="row">
+        <div class="row_products">
 
             
           <div class="col-md-9 col-md-offset-3">
@@ -30,16 +31,16 @@
 
                 <h1>{{ current_product.slogan }}</h1>
 
-               <h3><a href="#0">Buy ></a></h3>
+               <h3><a href="#0">Buy</a></span></span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#0">Support</a></h3>
 
                 </div>
 
 
                 <img src="{{ current_product.slug }}" alt="" class="img-responsive center-block">
 
-                <div class="device">
+                <div class="device_bottom">
 
-                <h3><a href="#0">Buy ></a></h3>
+                <h3><a href="#0">Buy</a></span></span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#0">Support</a></h3>
 
                 </div>
                 
