--- a/product/templates/products.html
+++ b/product/templates/products.html
@@ -32,16 +32,16 @@
 
                 <h1>{{ product.slogan }}</h1>
 
-                <h3><a href="/products/product/{{current_category.id}}/{{product.id}}/">Learning more ></a><span></span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#0">Buy ></a></h3>
+                <h3><a href="/products/product/{{current_category.id}}/{{product.id}}/">Learning more</a><span></span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#0">Buy</a></h3>
 
                 </div>
 
 
                 <img src="{{ product.slug }}" alt="" class="img-responsive center-block">
 
-                <div class="device">
+                <div class="device_bottom">
 
-                <h3><a href="/products/product/{{current_category.id}}/{{product.id}}/">Learning more ></a><span></span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#0">Buy ></a></h3>
+                <h3><a href="/products/product/{{current_category.id}}/{{product.id}}/">Learning more</a><span></span>&nbsp;&nbsp;&nbsp;&nbsp;<a href="#0">Buy</a></h3>
 
                 </div>
                 
