--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,17 +11,26 @@
 
 <!-- Contact Section-->
     <section id="contact">
+
+    <div class="small-header bg-white"></div>
+    
       <div class="container">
-        <div class="row">
+      <div class="container">
+        <div class="row_products">
           <div class="col-md-5">
             <h3>contact us</h3>
-            <p>Feel free to contact us. A business has to be involving, it has to be fun, and it has to exercise your creative instincts. Start where you are. Use what you have. Do what you can. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-            <hr>
-            <h5><i class="fa fa-map-marker fa-fw fa-lg"></i> 1234 Some Avenue, New York, NY 56789
+            <p>Feel free to contact us. A business has to be involving, it has to be fun, and it has to exercise your creative instincts. Start where you are. Use what you have. Do what you can.</p>
+            <hr>US Headquarters
+Pangolin Laser Systems, Inc.
+9501 Satellite Boulevard, Suite 109
+Orlando, Florida 32837,
+
             </h5>
-            <h5><i class="fa fa-envelope fa-fw fa-lg"></i> info@youwebsite.com
+            <h5><i class="fa fa-envelope fa-fw fa-lg"></i> contact@pangolin.com
             </h5>
-            <h5><i class="fa fa-phone fa-fw fa-lg"></i> (123) 456-7890
+            <h5><i class="fa fa-phone fa-fw fa-lg"></i> USA Phone: +1-407-299-2088
+            </h5>
+            <h5><i class="fa fa-phone fa-fw fa-lg"></i> Fax +1-407-299-6066
             </h5>
           </div>
           <div class="col-md-5 col-md-offset-2">
@@ -66,10 +75,10 @@
       <div class="container wow fadeIn">
         <div class="row">
           <div class="col-md-10">
-            <h3 class="no-pad"><span class="bold">Universal</span> is the perfect template for your next project!
+            <h3 class="no-pad"><span class="bold">Pangolin</span>
             </h3>
           </div>
-          <div class="col-md-2 text-right"><a href="https://themeforest.net/item/universal-smart-multipurpose-html5-template/17268942" class="btn btn-dark">get it now</a></div>
+          <div class="col-md-2 text-right"><a href="/contact/" class="btn btn-dark">Contact</a></div>
         </div>
       </div>
     </section>
