--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
     <header class="cd-auto-hide-header">
 
  
-  <div class="logo"><a href="/"><img src="{% static 'pangolin/img/pangolin_logo_small.png' %}" alt="Logo"></a></div>
+  <div class="logo"><a href="/"><img src="{% static 'pangolin/img/pangolin_logo_new_small.png' %}" alt="Logo"></a></div>
 
  
 
@@ -181,12 +181,12 @@
            
            <div class="col-sm-3 col-sm-offset-1 footer-menu">
             <h5>Pangolin</h5>
-            <h6 class="no-pad"><a href="services.html">About us</a></h6>
-            <h6 class="no-pad"><a href="clients.html">Our Clients</a></h6>
-            <h6 class="no-pad"><a href="contact.html">Our Team</a></h6>
-            <h6 class="no-pad"><a href="contact.html">Contact Us</a></h6>
-            <h6 class="no-pad"><a href="register.html">Register</a></h6>
-            <h6 class="no-pad"><a href="shop.html">Shop</a></h6>
+            <h6 class="no-pad"><a href="/news/">About us</a></h6>
+            <h6 class="no-pad"><a href="/news/">Our Clients</a></h6>
+            <h6 class="no-pad"><a href="/news/">Our Team</a></h6>
+            <h6 class="no-pad"><a href="/contact/">Contact Us</a></h6>
+            <h6 class="no-pad"><a href="/contact/">Register</a></h6>
+            <h6 class="no-pad"><a href="/">Shop</a></h6>
           </div>
          
         </div>
@@ -196,22 +196,28 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
-            <h6>Powered By <a href="https://Pangolin.com"> Pangolin.com</a>
-            </h6>
+            <h8><a href="https://Pangolin.com">2016 &copy Pangolin Laser Systems Inc.</a>
+            </h8>
           </div>
           <div class="col-sm-3 col-sm-offset-1">
-            <h6>We <i class="fa fa-heart fa-fw"></i> creative people
-            </h6>
+              
+              {# <img src="http://pangolin.com/wp-content/themes/Pangolin/images/pay_cards.png" alt="Payment methods" /> #}
+            
+            
+            
+             {# <h8><a href="/terms-of-service-agreement/">Terms of use</a>|<a href="/privacy-policy/">Privacy Policy</a>|<a href="/use-of-cookies/">We Use Cookies</a>|<a href="/copyright-policy/">Copyright|DMCA policy</a></h8> #}
+            {# <h6>We <i class="fa fa-heart fa-fw"></i> creative people #}
+            
           </div>
           <div class="col-sm-3 col-sm-offset-1 text-right">
             <ul class="list-inline">
-              <li><a href="/"><i class="fa fa-twitter fa-fw fa-lg"></i></a></li>
-              <li><a href="/"><i class="fa fa-facebook fa-fw fa-lg"></i></a></li>
-              <li><a href="/"><i class="fa fa-google-plus fa-fw fa-lg"></i></a></li>
-              <li><a href="/"><i class="fa fa-linkedin fa-fw fa-lg"></i></a></li>
-              <li><a href="/"><i class="fa fa-pinterest fa-fw fa-lg"></i></a></li>
-              <li><a href="/"><i class="fa fa-youtube fa-fw fa-lg"></i></a></li>
-              <li><a href="/"><i class="fa fa-youtube fa-fw fa-lg"></i></a></li>
+              <li><a href="https://www.twitter.com/PangolinSystems"><i class="fa fa-twitter fa-fw fa-lg"></i></a></li>
+              <li><a href="https://www.facebook.com/PangolinSystems"><i class="fa fa-facebook fa-fw fa-lg"></i></a></li>
+              <li><a href="http://www.Youtube.com/PangolinShows"><i class="fa fa-youtube fa-fw fa-lg"></i></a></li>
+              <li><a href="https://www.linkedin.com/in/pangolinsystems"><i class="fa fa-linkedin fa-fw fa-lg"></i></a></li>
+              <li><a href="https://www.pinterest.com/pangolinlaser"><i class="fa fa-pinterest fa-fw fa-lg"></i></a></li>
+              <li><a href="https://plus.google.com/+PangolinSystems"><i class="fa fa-google-plus fa-fw fa-lg"></i></a></li>
+              <li><a href="http://i.youku.com/u/UMjE5NTk4NzY4"><i class="fa fa-youtube fa-fw fa-lg"></i></a></li>
             </ul>
           </div>
         </div>
@@ -248,7 +254,4 @@
     
   </body>
 </html>
-
-
-
-   
+  
