--- a/static/pangolin/auto-hiding-navigation/css/style.css
+++ b/static/pangolin/auto-hiding-navigation/css/style.css
@@ -158,17 +158,369 @@ a {
           transform: rotate(45deg);
 }
 
+.search-form {
+  margin: 5px 10px;
+  width: 250px;
+  font-size: 14px; }
+  .search-form .form-control {
+    color: #ccc !important; }
+
+.search-button {
+  width: 42px;
+  height: 40px;
+  line-height: 38px;
+  margin-top: -22px;
+  position: absolute;
+  top: 50%;
+  right: 12px;
+  overflow: hidden;
+  background: transparent;
+  color: #888;
+  border: none;
+  outline: none; }
+
+.search-form {
+  padding: 10px;
+  width: 100%;
+  border-bottom: #555;
+  margin: 0; }
+
+.nav .badge {
+  background-color: #789;
+  color: #fff;
+  padding: 4px 5px 5px 6px;
+  font-size: 11px;
+  position: absolute;
+  margin: -10px -5px;
+  line-height: 1;
+  border-radius: 50% !important; }
+
+.navbar-toggle {
+  padding: 10px 0; }
+  .navbar-toggle .icon-bar {
+    width: 30px;
+    border-radius: 0;
+    background: #fff; }
+
+.top-nav-collapse .icon-bar {
+  background: #333; }
+
+.vmenu {
+  display: inline-block;
+  margin: 0;
+  padding: 0; }
+
+a.btn-nav .btn {
+  margin-bottom: 0; }
+
+.navbar-custom .nav .dropdown-menu li a.btn-nav:hover {
+  background-color: transparent; }
+
+.menu-divider {
+  width: 1px;
+  border-right: 1px solid #b3b3b3;
+  line-height: 18px;
+  margin: 23px 15px 0; }
+
+.dropdown-menu strong {
+  padding: 20px 0 16px 18px;
+  display: block;
+  font-size: 13px;
+  font-weight: 800;
+  line-height: 1px;
+  color: #555 !important; }
+
+.nav .active {
+  height: auto !important; }
+
+.dropdown-menu {
+  padding: 10px 0; }
+
+.navbar-nav:not(.sm-collapsible) ul .caret {
+  position: absolute;
+  right: 0;
+  margin-top: 6px;
+  margin-right: 15px;
+  border-top: 4px solid transparent;
+  border-bottom: 4px solid transparent;
+  border-left: 4px dashed; }
+.navbar-nav:not(.sm-collapsible) ul a.has-submenu {
+  padding-right: 30px; }
+.navbar-nav.sm-collapsible .caret, .navbar-nav.sm-collapsible ul .caret {
+  position: absolute;
+  right: 0;
+  margin: -25px 14px 0 0;
+  padding: 0;
+  width: 32px;
+  height: 26px;
+  line-height: 24px;
+  text-align: center;
+  border-width: 1px;
+  border-style: solid; }
+.navbar-nav.sm-collapsible .caret:before {
+  content: '+';
+  font-family: monospace;
+  font-size: 20px; }
+.navbar-nav.sm-collapsible .open > a > .caret:before {
+  content: '-'; }
+.navbar-nav.sm-collapsible a.has-submenu {
+  padding-right: 50px; }
+.navbar-nav.sm-collapsible[data-sm-skip-collapsible-behavior] .caret, .navbar-nav.sm-collapsible[data-sm-skip-collapsible-behavior] ul .caret {
+  position: static;
+  margin: 0 0 0 2px;
+  padding: 0;
+  width: 0;
+  height: 0;
+  border-top: 4px dashed;
+  border-right: 4px solid transparent;
+  border-bottom: 0;
+  border-left: 4px solid transparent; }
+.navbar-nav.sm-collapsible[data-sm-skip-collapsible-behavior] .caret:before {
+  content: '' !important; }
+.navbar-nav.sm-collapsible[data-sm-skip-collapsible-behavior] a.has-submenu {
+  padding-right: 15px; }
+.navbar-nav span.scroll-up, .navbar-nav span.scroll-down {
+  position: absolute;
+  display: none;
+  visibility: hidden;
+  height: 20px;
+  overflow: hidden;
+  text-align: center; }
+.navbar-nav span.scroll-up-arrow {
+  position: absolute;
+  top: -2px;
+  left: 50%;
+  margin-left: -8px;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  border-top: 7px dashed transparent;
+  border-right: 7px dashed transparent;
+  border-bottom: 7px solid;
+  border-left: 7px dashed transparent; }
+.navbar-nav span.scroll-down-arrow {
+  position: absolute;
+  top: -2px;
+  left: 50%;
+  margin-left: -8px;
+  width: 0;
+  height: 0;
+  overflow: hidden;
+  border-top: 7px dashed transparent;
+  border-right: 7px dashed transparent;
+  border-bottom: 7px solid;
+  border-left: 7px dashed transparent;
+  top: 6px;
+  border-top: 7px solid;
+  border-right: 7px dashed transparent;
+  border-bottom: 7px dashed transparent;
+  border-left: 7px dashed transparent; }
+.navbar-nav.sm-collapsible ul .dropdown-menu > li > a, .navbar-nav.sm-collapsible ul .dropdown-menu .dropdown-header {
+  padding-left: 35px; }
+.navbar-nav.sm-collapsible ul ul .dropdown-menu > li > a, .navbar-nav.sm-collapsible ul ul .dropdown-menu .dropdown-header {
+  padding-left: 45px; }
+.navbar-nav.sm-collapsible ul ul ul .dropdown-menu > li > a, .navbar-nav.sm-collapsible ul ul ul .dropdown-menu .dropdown-header {
+  padding-left: 55px; }
+.navbar-nav.sm-collapsible ul ul ul ul .dropdown-menu > li > a, .navbar-nav.sm-collapsible ul ul ul ul .dropdown-menu .dropdown-header {
+  padding-left: 65px; }
+.navbar-nav .dropdown-menu > li > a {
+  white-space: normal; }
+.navbar-nav ul.sm-nowrap > li > a {
+  white-space: nowrap; }
+.navbar-nav.sm-collapsible ul.sm-nowrap > li > a {
+  white-space: normal; }
+
+.navbar-right ul.dropdown-menu {
+  left: auto;
+  right: 0; }
+
+.dropdown-menu .fa {
+  opacity: 0.5 !important;
+  line-height: 13px !important; }
+
+.nav .fa {
+  font-size: 16px;
+  line-height: 1px; }
+.nav .fa-angle-down {
+  font-size: 13px; }
+.nav .fa, .nav a .fa {
+  opacity: 1 !important; }
+.nav .fa-plus {
+  font-size: 12px; }
+
+@media (min-width: 991px) {
+  .search-form input {
+    background: transparent;
+    border: 0;
+    width: 200px; }
+
+  .navbar-custom {
+    padding: 30px;
+    border-bottom: 0;
+    letter-spacing: 1px;
+    background: 0 0;
+    background: transparent; }
+    .navbar-custom.top-nav-collapse {
+      padding: 0 30px;
+      background-color: #fff; }
+
+  .navbar-custom .nav .dropdown-menu li a:hover {
+    background-color: #eee; }
+
+  @-webkit-keyframes fadeInUniversal {
+    0% {
+      opacity: 0;
+      transform: translate(0, -40px); }
+    100% {
+      opacity: 1;
+      transform: translate(0, 0); } }
+  @keyframes fadeInUniversal {
+    0% {
+      opacity: 0;
+      transform: translate(0, -40px); }
+    100% {
+      opacity: 1;
+      transform: translate(0, 0); } }
+  li:hover ul.dropdown-menu {
+    opacity: 1;
+    -webkit-animation: fadeInUniversal 0.7s;
+    animation: fadeInUniversal 0.7s;
+    -webkit-animation-fill-mode: forwards;
+    animation-fill-mode: forwards; }
+
+  ul.nav li.dropdown:hover > ul.dropdown-menu {
+    display: block; }
+
+  .navbar-left {
+    float: right !important; }
+
+  ul.dropdown-menu.columns-2 {
+    left: 0 !important;
+    padding: 20px 22px 25px; }
+  ul.dropdown-menu.columns-3 {
+    left: 0 !important;
+    padding: 20px 22px 25px;
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 3;
+    min-width: 760px !important; }
+  ul.dropdown-menu.columns-2 {
+    -moz-column-count: 2;
+    -webkit-column-count: 2;
+    column-count: 2;
+    min-width: 380px !important; }
+
+  .columns2 .btn-white, .columns3 .btn-white {
+    margin-top: 12px;
+    display: inline-block; }
+
+  .navbar-fixed-top .caret, .navbar-fixed-top .open > .dropdown-menu {
+    display: none; }
+
+  .angle-right:after {
+    float: right;
+    font-family: 'fontawesome';
+    content: "\f105";
+    color: inherit;
+    position: absolute;
+    right: 20px; } }
+@media (max-width: 991px) {
+  .dropdown-menu {
+    padding: 0; } }
+@media (max-width: 990px) {
+  p.empty {
+    display: none; }
+
+  .search-button {
+    margin-top: 0; }
+
+  .nav .badge {
+    margin: 2px 4px; }
+  .nav a {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.05) !important;
+    color: #000 !important; }
+    .nav a:focus {
+      border-bottom: 1px solid rgba(0, 0, 0, 0.05) !important; }
+
+  .navbar-header {
+    float: none; }
+
+  .navbar-left, .navbar-right {
+    float: none !important; }
+
+  .navbar-toggle {
+    display: block; }
+
+  .navbar-collapse {
+    background-color: #eee !important;
+    border-top: 1px solid transparent;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1); }
+    .navbar-collapse.collapse {
+      display: none !important; }
+
+  .navbar-nav {
+    float: none !important;
+    margin-top: 7px; }
+    .navbar-nav > li {
+      float: none; }
+      .navbar-nav > li > a {
+        padding-top: 14px;
+        padding-bottom: 14px; }
+
+  .collapse.in {
+    display: block !important; }
+
+  .navbar-collapse.in {
+    overflow-y: auto !important; }
+
+  .navbar-nav .open .dropdown-menu {
+    position: static;
+    float: none;
+    width: auto;
+    margin-top: 0;
+    background-color: transparent;
+    border: 0;
+    box-shadow: none; }
+    .navbar-nav .open .dropdown-menu > li > a, .navbar-nav .open .dropdown-menu .dropdown-header {
+      padding: 10px 15px 10px 25px; }
+
+  .navbar-inverse .navbar-nav .open .dropdown-menu > li > a {
+    color: #999; }
+    .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-inverse .navbar-nav .open .dropdown-menu > li > a:focus {
+      color: #fff;
+      background-color: transparent;
+      background-image: none; } }
+.navbar-fixed-bottom .navbar-collapse, .navbar-fixed-top .navbar-collapse {
+  max-height: 400px; }
+
+/* nav */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .cd-primary-nav {
   display: inline-block;
   float: right;
   height: 100%;
   padding-right: 5%;
 }
-.cd-secondary-nav ul {
-    /* reset mobile style */
+/*.cd-secondary-nav ul {
+     reset mobile style 
     display: block;
     text-align: center;
-  }
+  }*/
 
 .cd-primary-nav > ul {
   position: absolute;
