--- a/templates/main.html
+++ b/templates/main.html
@@ -61,7 +61,6 @@
          {% endif %}  
 
          {% endfor %}
-         </div>
 
       <!-- Controls--><a href="#Carousel-intro" data-slide="prev" class="left carousel-control"><span class="icon-prev"></span></a><a href="#Carousel-intro" data-slide="next" class="right carousel-control"><span class="icon-next"></span></a>
     </header>
@@ -74,22 +73,24 @@
       <div class="container text-center">
         
         <div class="row">
+        {% for product in products_main %}
           <div data-wow-delay=".2s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon-big icon ion-ios-infinite-outline"></i> Multi-purpose</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis pulvinar vestibulum. Donec eleifend, sem sed dictum</p>
+
+          <div class="device_main">
+
+                <h3>{{ product.product_title }}</h3>
+
+                <h4>{{ product.slogan }}</h4>
+
+          
+                <a href="/products/product/{{product.product_category.id}}/{{product.id}}/"><img src="{{ product.slug }}" alt="" class="img-responsive center-block"></a>
+
+
+                 </div>
+
           </div>
-          <div data-wow-delay=".4s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon-big ion-ios-sunny-outline"></i> Coder friendly</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis pulvinar vestibulum. Donec eleifend, sem sed dictum</p>
-          </div>
-          <div data-wow-delay=".6s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon-big ion-ios-glasses-outline"></i> Good readability</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis pulvinar vestibulum. Donec eleifend, sem sed dictum</p>
-          </div>
-          <div data-wow-delay=".8s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon-big ion-ios-pulse"></i> Easy to Use</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis pulvinar vestibulum. Donec eleifend, sem sed dictum</p>
-          </div>
+           {% endfor %}
+        
         </div>
       </div>
     </section>
