--- a/templates/support.html
+++ b/templates/support.html
@@ -11,55 +11,11 @@
 
 
     
-    <!-- Services Section-->
-    <section id="services" class="bg-img4 text-center">
-      <div class="overlay"></div>
-      <div class="container text-center">
-        <div class="row">
-          <div class="col-lg-8 col-lg-offset-2">
-            <h3>Our Services</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla convallis pulvinar vestibulum. Doneceleifend, sem sed dictum. Lorem ipsum dolor sit amet, consectetur adipiscing elits</p>
-          </div>
-        </div>
-        <div class="row">
-          <div data-wow-delay=".2s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon icon-big ion-ios-analytics-outline"></i> ANALITICS</h4>
-            <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla convallis pul.</p>
-          </div>
-          <div data-wow-delay=".4s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon icon-big ion-ios-pie-outline"></i> DESIGN</h4>
-            <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla convallis pul.</p>
-          </div>
-          <div data-wow-delay=".6s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon icon-big ion-ios-stopwatch-outline"></i> CONSULTING</h4>
-            <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla convallis pul.</p>
-          </div>
-          <div data-wow-delay=".8s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon icon-big ion-ios-game-controller-b-outline"></i> ADVERTISING</h4>
-            <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla convallis pul.</p>
-          </div>
-          <div data-wow-delay="1s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon icon-big icon ion-ios-infinite-outline"></i>BRANDING</h4>
-            <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla convallis pul.</p>
-          </div>
-          <div data-wow-delay="1.2s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon icon-big ion-ios-stopwatch-outline"></i>DEVELOPMENT</h4>
-            <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla convallis pul.</p>
-          </div>
-          <div data-wow-delay="1.4s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon icon-big ion-ios-monitor-outline"></i>OPTIMIZATION</h4>
-            <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla convallis pul.</p>
-          </div>
-          <div data-wow-delay="1.6s" class="col-lg-3 col-sm-6 wow fadeIn">
-            <h4><i class="icon icon-big ion-ios-settings"></i>CUSTOMIZATION</h4>
-            <p>Lorem ipsum dolor sit amet. Con eleifend sem sed dictum mattis sectetur elit. Nulla convallis pul.</p>
-          </div>
-        </div>
-      </div>
-    </section>
+   
   
     <!-- Subscribe Section-->
     <section id="subscribe" class="section-small bg-img5 text-center">
+    <div class="small-header bg-white"></div>
       <div class="overlay-white"></div>
       <div class="container">
         <div class="row">
@@ -67,7 +23,7 @@
             <h3>Subscribe</h3>
             <h5>Sign-Up For News Updates and Alerts</h5>
             <!-- MailChimp Signup Form - Replace the form action in the line below with your MailChimp embed action! For more information on how to do this please visit the Docs!-->
-            <form id="mc-embedded-subscribe-form" action="http://forbetterweb.us11.list-manage.com/subscribe/post?u=4f751a6c58b225179404715f0&amp;id=18fc72763a" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="" class="form-inline subscribe-form">
+            <form id="mc-embedded-subscribe-form" action="http://pangolin.com" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate="" class="form-inline subscribe-form">
               <div class="input-group input-group-lg">
                 <input id="mce-EMAIL" type="email" name="EMAIL" placeholder="Email address..." class="form-control"><span class="input-group-btn">
                   <button id="mc-embedded-subscribe" type="submit" name="subscribe" class="btn btn-dark">Subscribe</button></span>
